--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
           <div class="nav-key">
             <img src="./images/icon-menu.svg">
           </div>
-          <a href="/index.html"><h1>sneakers</h1></a>
+          <a href=""><h1>sneakers</h1></a>
           <ul class="links">
             <div class="close-link">
               <img src="./images/icon-close.svg">
